--- a/frontend/src/styles/RegisterPage.css
+++ b/frontend/src/styles/RegisterPage.css
@@ -99,7 +99,12 @@ input::placeholder {
 .register-image {
   width: 60%;
   height: 100%;
+  background-image: url('https://moringaschool.com/wp-content/uploads/2022/02/Image2-768x512.jpg');
+  background-size: cover;
+  background-position: center;
+  border-radius: 8px;
 }
+
 
 .register-image img {
   width: 100%;
