--- a/frontend/src/styles/DashboardPage.css
+++ b/frontend/src/styles/DashboardPage.css
@@ -2,8 +2,8 @@
     text-align: center;
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #f9f9f9;
-    height: 100vh;
+    background-color:antiquewhite;
+    height: 97vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
